feat: journeys-admin email verify

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -33,6 +33,17 @@
   "Sign In": "Sign In",
   "Terms and Conditions": "Terms and Conditions",
   "A question about the terms and conditions form": "A question about the terms and conditions form",
+  "Required": "Required",
+  "Validate NextStep Email": "Validate NextStep Email",
+  "Verify Your Email": "Verify Your Email",
+  "To start making NextSteps journeys": "To start making NextSteps journeys",
+  "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.": "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.",
+  "Resend Validation Email": "Resend Validation Email",
+  "Verify With Code Instead": "Verify With Code Instead",
+  "Enter verification code from email": "Enter verification code from email",
+  "Code": "Code",
+  "Validate Email": "Validate Email",
+  "Logout": "Logout",
   "Manage Access": "Manage Access",
   "You can't edit this journey": "You can't edit this journey",
   "Send an access request to the creator of this journey": "Send an access request to the creator of this journey",
@@ -55,9 +66,8 @@
   "Editor invite link copied": "Editor invite link copied",
   "Users invited by link will request approval.": "Users invited by link will request approval.",
   "Please enter a valid email address": "Please enter a valid email address",
-  "Required": "Required",
   "This email is already on the list": "This email is already on the list",
-  "No email notifications. New users get access instantly.": "No email notifications. New users get access instantly.",
+  "New users get access instantly.": "New users get access instantly.",
   "Approve": "Approve",
   "Promote": "Promote",
   "Remove": "Remove",
@@ -443,6 +453,9 @@
   "No Results Found": "No Results Found",
   "No More Videos": "No More Videos",
   "Search by title in JF Library": "Search by title in JF Library",
+  "Please verify your email": "Please verify your email",
+  "You need to verify your email before you can continue.": "You need to verify your email before you can continue.",
+  "Send verification email": "Send verification email",
   "Journeys Archived": "Journeys Archived",
   "Journeys Trashed": "Journeys Trashed",
   "No journeys to display.": "No journeys to display.",
@@ -594,7 +607,7 @@
   "Change Team Name": "Change Team Name",
   "Save": "Save",
   "Only a manager can invite new members to the team": "Only a manager can invite new members to the team",
-  "No email notifications. New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "No email notifications. New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.",
+  "New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}} {{secondLanguage}}</2>": "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}, {{secondLanguage}}</2>",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>_one": "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>_other": "<0>Journey Templates</0><1>in</1><2>{{count}} languages</2>",
