--- a/libs/locales/tl-PH/apps-journeys-admin.json
+++ b/libs/locales/tl-PH/apps-journeys-admin.json
@@ -33,6 +33,17 @@
   "Sign In": "Mag-sign In",
   "Terms and Conditions": "Mga Tuntunin at Kundisyon",
   "A question about the terms and conditions form": "Isang tanong tungkol sa form ng mga tuntunin at kundisyon",
+  "Required": "Kailangan",
+  "Validate NextStep Email": "Validate NextStep Email",
+  "Verify Your Email": "Verify Your Email",
+  "To start making NextSteps journeys": "To start making NextSteps journeys",
+  "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.": "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.",
+  "Resend Validation Email": "Resend Validation Email",
+  "Verify With Code Instead": "Verify With Code Instead",
+  "Enter verification code from email": "Enter verification code from email",
+  "Code": "Code",
+  "Validate Email": "Validate Email",
+  "Logout": "Logout",
   "Manage Access": "Manage Access",
   "You can't edit this journey": "Hindi mo maaaring i-edit ang paglalakbay na ito",
   "Send an access request to the creator of this journey": "Magpadala ng kahilingan sa pag-access sa lumikha ng paglalakbay na ito",
@@ -55,9 +66,8 @@
   "Editor invite link copied": "Nakopya ang link ng imbitasyon ng editor",
   "Users invited by link will request approval.": "Hihiling ng pag-apruba ang mga user na inimbitahan sa pamamagitan ng link.",
   "Please enter a valid email address": "Mangyaring magpasok ng wastong email address",
-  "Required": "Kailangan",
   "This email is already on the list": "Ang email na ito ay nasa listahan na",
-  "No email notifications. New users get access instantly.": "Walang mga abiso sa email. ",
+  "New users get access instantly.": "New users get access instantly.",
   "Approve": "Aprubahan",
   "Promote": "I-promote",
   "Remove": "Alisin",
@@ -441,6 +451,9 @@
   "No Results Found": "No Results Found",
   "No More Videos": "No More Videos",
   "Search by title in JF Library": "Search by title in JF Library",
+  "Please verify your email": "Please verify your email",
+  "You need to verify your email before you can continue.": "You need to verify your email before you can continue.",
+  "Send verification email": "Send verification email",
   "Journeys Archived": "Mga Paglalakbay na Naka-archive",
   "Journeys Trashed": "Mga Paglalakbay na Ibinasura",
   "No journeys to display.": "Walang mga paglalakbay na ipapakita.",
@@ -592,7 +605,7 @@
   "Change Team Name": "Baguhin ang Pangalan ng Koponan",
   "Save": "I-save",
   "Only a manager can invite new members to the team": "Isang manager lang ang makakapag-imbita ng mga bagong miyembro sa team",
-  "No email notifications. New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "Walang mga abiso sa email. ",
+  "New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}} {{secondLanguage}}</2>": "<0>Mga Template ng Paglalakbay</0><1>sa</1><2>{{firstLanguage}}, {{secondLanguage}}</2>",
   "Topics, holidays, felt needs, collections": "Mga paksa, pista opisyal, nadama na pangangailangan, mga koleksyon",
   "Audience": "Madla",
