chore: new translations apps-journeys-admin.json Chinese Simplified

--- a/libs/locales/zh-CN/apps-journeys-admin.json
+++ b/libs/locales/zh-CN/apps-journeys-admin.json
@@ -33,6 +33,17 @@
   "Sign In": "登入",
   "Terms and Conditions": "条款和条件",
   "A question about the terms and conditions form": "关于条款和条件表格的问题",
+  "Required": "必需的",
+  "Validate NextStep Email": "验证 NextStep 电子邮件",
+  "Verify Your Email": "验证您的电子邮件",
+  "To start making NextSteps journeys": "开始 NextSteps 之旅",
+  "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.": "我们已向这个地址发送了电子邮件，其中包含验证您的帐户的链接。如果几分钟后您仍未收到该电子邮件，请检查您的垃圾邮件文件夹。",
+  "Resend Validation Email": "重新发送验证电子邮件",
+  "Verify With Code Instead": "用代码代替验证",
+  "Enter verification code from email": "输入电子邮件中的验证码",
+  "Code": "代码",
+  "Validate Email": "验证电子邮件",
+  "Logout": "注销",
   "Manage Access": "管理访问",
   "You can't edit this journey": "您无法编辑此旅程",
   "Send an access request to the creator of this journey": "向此旅程的创建者发送访问请求",
@@ -55,9 +66,8 @@
   "Editor invite link copied": "编辑者邀请链接已复制",
   "Users invited by link will request approval.": "通过链接邀请的用户将请求批准。",
   "Please enter a valid email address": "请输入有效的电子邮件地址",
-  "Required": "必需的",
   "This email is already on the list": "该电子邮件已在列表中",
-  "No email notifications. New users get access instantly.": "没有电子邮件通知。",
+  "New users get access instantly.": "新用户可立即访问。",
   "Approve": "批准",
   "Promote": "推动",
   "Remove": "消除",
@@ -441,6 +451,9 @@
   "No Results Found": "未找到结果",
   "No More Videos": "没有更多视频",
   "Search by title in JF Library": "在 JF 图书馆中按标题搜索",
+  "Please verify your email": "请验证您的电子邮件",
+  "You need to verify your email before you can continue.": "在继续之前，您需要验证您的电子邮件。",
+  "Send verification email": "发送验证电子邮件",
   "Journeys Archived": "旅程存档",
   "Journeys Trashed": "旅程被毁",
   "No journeys to display.": "没有可显示的行程。",
@@ -592,7 +605,7 @@
   "Change Team Name": "更改团队名称",
   "Save": "节省",
   "Only a manager can invite new members to the team": "只有经理可以邀请新成员加入团队",
-  "No email notifications. New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "没有电子邮件通知。",
+  "New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "新成员可立即访问。团队成员可以查看所有分析结果，编辑任何旅程，删除和复制旅程。",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}} {{secondLanguage}}</2>": "<0>旅程模板</0><1>在</1><2>{{firstLanguage}}, {{secondLanguage}}</2>",
   "Topics, holidays, felt needs, collections": "主题、假期、感受到的需求、收藏",
   "Audience": "观众",
