--- a/libs/locales/zh-TW/apps-journeys-admin.json
+++ b/libs/locales/zh-TW/apps-journeys-admin.json
@@ -33,6 +33,17 @@
   "Sign In": "登入",
   "Terms and Conditions": "條款與條件",
   "A question about the terms and conditions form": "關於條款和條件表格的問題",
+  "Required": "必需的",
+  "Validate NextStep Email": "Validate NextStep Email",
+  "Verify Your Email": "Verify Your Email",
+  "To start making NextSteps journeys": "To start making NextSteps journeys",
+  "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.": "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.",
+  "Resend Validation Email": "Resend Validation Email",
+  "Verify With Code Instead": "Verify With Code Instead",
+  "Enter verification code from email": "Enter verification code from email",
+  "Code": "Code",
+  "Validate Email": "Validate Email",
+  "Logout": "Logout",
   "Manage Access": "Manage Access",
   "You can't edit this journey": "您無法編輯此旅程",
   "Send an access request to the creator of this journey": "向此旅程的創建者發送訪問請求",
@@ -55,9 +66,8 @@
   "Editor invite link copied": "編輯者邀請連結已複製",
   "Users invited by link will request approval.": "透過連結邀請的用戶將請求批准。",
   "Please enter a valid email address": "請輸入有效的電子郵件地址",
-  "Required": "必需的",
   "This email is already on the list": "該電子郵件已在清單中",
-  "No email notifications. New users get access instantly.": "沒有電子郵件通知。",
+  "New users get access instantly.": "New users get access instantly.",
   "Approve": "核准",
   "Promote": "推動",
   "Remove": "消除",
@@ -441,6 +451,9 @@
   "No Results Found": "No Results Found",
   "No More Videos": "No More Videos",
   "Search by title in JF Library": "Search by title in JF Library",
+  "Please verify your email": "Please verify your email",
+  "You need to verify your email before you can continue.": "You need to verify your email before you can continue.",
+  "Send verification email": "Send verification email",
   "Journeys Archived": "旅程存檔",
   "Journeys Trashed": "旅程被毀",
   "No journeys to display.": "沒有可顯示的行程。",
@@ -592,7 +605,7 @@
   "Change Team Name": "更改團隊名稱",
   "Save": "節省",
   "Only a manager can invite new members to the team": "只有經理可以邀請新成員加入團隊",
-  "No email notifications. New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "沒有電子郵件通知。",
+  "New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}} {{secondLanguage}}</2>": "<0>旅程模板</0><1>在</1><2>{{firstLanguage}}, {{secondLanguage}}</2>",
   "Topics, holidays, felt needs, collections": "主題、假期、感受到的需求、收藏",
   "Audience": "觀眾",
