chore: new translations apps-journeys-admin.json French

--- a/libs/locales/fr-FR/apps-journeys-admin.json
+++ b/libs/locales/fr-FR/apps-journeys-admin.json
@@ -33,6 +33,17 @@
   "Sign In": "S'inscrire",
   "Terms and Conditions": "Conditions générales d'utilisation",
   "A question about the terms and conditions form": "Une question sur le formulaire des conditions générales",
+  "Required": "Exigée",
+  "Validate NextStep Email": "Valider le courriel de NextStep",
+  "Verify Your Email": "Vérifie ton courriel",
+  "To start making NextSteps journeys": "Pour commencer à faire des voyages NextSteps",
+  "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.": "Un courriel a été envoyé à cette adresse avec un lien pour vérifier ton compte. Si tu n'as pas reçu l'email après quelques minutes, vérifie ton dossier spam.",
+  "Resend Validation Email": "Renvoyer le courriel de validation",
+  "Verify With Code Instead": "Vérifie plutôt avec le code",
+  "Enter verification code from email": "Saisis le code de vérification figurant dans l'e-mail",
+  "Code": "Code",
+  "Validate Email": "Valider l'e-mail",
+  "Logout": "Déconnexion",
   "Manage Access": "Gérer l'accès",
   "You can't edit this journey": "Tu ne peux pas modifier ce voyage",
   "Send an access request to the creator of this journey": "Envoie une demande d'accès au créateur de ce voyage.",
@@ -55,9 +66,8 @@
   "Editor invite link copied": "Le lien de l'invitation de l'éditeur a été copié",
   "Users invited by link will request approval.": "Les utilisateurs invités par un lien demanderont une approbation.",
   "Please enter a valid email address": "Saisis une adresse électronique valide",
-  "Required": "Exigée",
   "This email is already on the list": "Cet email est déjà sur la liste",
-  "No email notifications. New users get access instantly.": "Pas de notifications par e-mail. Les nouveaux utilisateurs ont un accès instantané.",
+  "New users get access instantly.": "Les nouveaux utilisateurs y ont accès instantanément.",
   "Approve": "Approuver",
   "Promote": "Promouvoir",
   "Remove": "Enlever",
@@ -441,6 +451,9 @@
   "No Results Found": "Aucun résultat trouvé",
   "No More Videos": "Plus de vidéos",
   "Search by title in JF Library": "Recherche par titre dans la bibliothèque JF",
+  "Please verify your email": "Vérifie ton e-mail, s'il te plaît",
+  "You need to verify your email before you can continue.": "Tu dois vérifier ton email avant de pouvoir continuer.",
+  "Send verification email": "Envoyer un courriel de vérification",
   "Journeys Archived": "Voyages archivés",
   "Journeys Trashed": "Les voyages à la poubelle",
   "No journeys to display.": "Aucun voyage à afficher.",
@@ -592,7 +605,7 @@
   "Change Team Name": "Changer le nom de l'équipe",
   "Save": "Sauvegarde",
   "Only a manager can invite new members to the team": "Seul un responsable peut inviter de nouveaux membres dans l'équipe.",
-  "No email notifications. New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "Pas de notifications par e-mail. Les nouveaux membres ont un accès instantané. Les membres de l'équipe peuvent voir toutes les analyses, modifier n'importe quel trajet, et supprimer et copier des trajets.",
+  "New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "Les nouveaux membres y ont accès instantanément. Les membres de l'équipe peuvent voir toutes les analyses, modifier n'importe quel trajet, et supprimer et copier des trajets.",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}} {{secondLanguage}}</2>": "<0>Modèles de voyage</0><1>en</1><2>{{firstLanguage}}, {{secondLanguage}}</2>",
   "Topics, holidays, felt needs, collections": "Thèmes, vacances, besoins ressentis, collections",
   "Audience": "Audience",
