chore: new translations apps-journeys-admin.json Spanish

--- a/libs/locales/es-ES/apps-journeys-admin.json
+++ b/libs/locales/es-ES/apps-journeys-admin.json
@@ -33,6 +33,17 @@
   "Sign In": "Regístrate",
   "Terms and Conditions": "Términos y condiciones",
   "A question about the terms and conditions form": "Una pregunta sobre el formulario de términos y condiciones",
+  "Required": "Necesario",
+  "Validate NextStep Email": "Validar correo electrónico de NextStep",
+  "Verify Your Email": "Verifica tu correo electrónico",
+  "To start making NextSteps journeys": "Para empezar a hacer viajes NextSteps",
+  "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.": "Se ha enviado un correo electrónico a esta dirección con un enlace para verificar tu cuenta. Si no has recibido el correo electrónico después de unos minutos, comprueba tu carpeta de correo no deseado.",
+  "Resend Validation Email": "Reenviar correo de validación",
+  "Verify With Code Instead": "Verifica con el código",
+  "Enter verification code from email": "Introduce el código de verificación del correo electrónico",
+  "Code": "Código",
+  "Validate Email": "Validar correo electrónico",
+  "Logout": "Cerrar sesión",
   "Manage Access": "Gestionar el acceso",
   "You can't edit this journey": "No puedes editar este viaje",
   "Send an access request to the creator of this journey": "Enviar una solicitud de acceso al creador de este viaje",
@@ -55,9 +66,8 @@
   "Editor invite link copied": "Enlace de invitación al editor copiado",
   "Users invited by link will request approval.": "Los usuarios invitados por enlace solicitarán aprobación.",
   "Please enter a valid email address": "Introduce una dirección de correo electrónico válida",
-  "Required": "Necesario",
   "This email is already on the list": "Este correo electrónico ya está en la lista",
-  "No email notifications. New users get access instantly.": "Sin notificaciones por correo electrónico. Los nuevos usuarios obtienen acceso instantáneamente.",
+  "New users get access instantly.": "Los nuevos usuarios obtienen acceso instantáneamente.",
   "Approve": "Aprueba",
   "Promote": "Promueve",
   "Remove": "Elimina",
@@ -441,6 +451,9 @@
   "No Results Found": "No se han encontrado resultados",
   "No More Videos": "No más vídeos",
   "Search by title in JF Library": "Buscar por título en la Biblioteca JF",
+  "Please verify your email": "Verifica tu correo electrónico",
+  "You need to verify your email before you can continue.": "Tienes que verificar tu correo electrónico antes de poder continuar.",
+  "Send verification email": "Enviar correo de verificación",
   "Journeys Archived": "Viajes Archivados",
   "Journeys Trashed": "Viajes destrozados",
   "No journeys to display.": "No hay viajes que mostrar.",
@@ -592,7 +605,7 @@
   "Change Team Name": "Cambiar el nombre del equipo",
   "Save": "Guarda",
   "Only a manager can invite new members to the team": "Sólo un manager puede invitar a nuevos miembros al equipo",
-  "No email notifications. New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "Sin notificaciones por correo electrónico. Los nuevos miembros obtienen acceso al instante. Los miembros del equipo pueden ver todos los análisis, editar cualquier trayecto y borrar y copiar trayectos.",
+  "New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "Los nuevos miembros obtienen acceso instantáneamente. Los miembros del equipo pueden ver todos los análisis, editar cualquier trayecto y borrar y copiar trayectos.",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}} {{secondLanguage}}</2>": "<0>Plantillas de viaje</0><1>en</1><2>{{firstLanguage}}, {{secondLanguage}}</2>",
   "Topics, holidays, felt needs, collections": "Temas, vacaciones, necesidades sentidas, colectas",
   "Audience": "Audiencia",
