chore: new translations apps-journeys-admin.json Turkish

--- a/libs/locales/tr-TR/apps-journeys-admin.json
+++ b/libs/locales/tr-TR/apps-journeys-admin.json
@@ -33,6 +33,17 @@
   "Sign In": "Oturum Aç",
   "Terms and Conditions": "Şartlar ve Koşullar",
   "A question about the terms and conditions form": "Şartlar ve koşullar formu hakkında bir soru",
+  "Required": "Gerekli",
+  "Validate NextStep Email": "NextStep E-postasını Doğrulama",
+  "Verify Your Email": "E-postanızı Doğrulayın",
+  "To start making NextSteps journeys": "NextSteps yolculukları yapmaya başlamak için",
+  "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.": "Bu adrese hesabınızı doğrulamak için bir bağlantı içeren e-posta gönderildi. Birkaç dakika sonra e-postayı almadıysanız, lütfen spam klasörünüzü kontrol edin.",
+  "Resend Validation Email": "Doğrulama E-postasını Yeniden Gönder",
+  "Verify With Code Instead": "Bunun Yerine Kod ile Doğrulayın",
+  "Enter verification code from email": "E-postadaki doğrulama kodunu girin",
+  "Code": "Kod",
+  "Validate Email": "E-posta Doğrulama",
+  "Logout": "Oturumu Kapat",
   "Manage Access": "Erişimi Yönet",
   "You can't edit this journey": "Bu yolculuğu düzenleyemezsiniz",
   "Send an access request to the creator of this journey": "Bu yolculuğun yaratıcısına bir erişim isteği gönderin",
@@ -55,9 +66,8 @@
   "Editor invite link copied": "Editör davet bağlantısı kopyalandı",
   "Users invited by link will request approval.": "Bağlantı ile davet edilen kullanıcılar onay isteyecektir.",
   "Please enter a valid email address": "Lütfen geçerli bir e-posta adresi girin",
-  "Required": "Gerekli",
   "This email is already on the list": "Bu e-posta zaten listede",
-  "No email notifications. New users get access instantly.": "E-posta bildirimi yok. Yeni kullanıcılar anında erişim elde eder.",
+  "New users get access instantly.": "Yeni kullanıcılar anında erişim elde eder.",
   "Approve": "Onaylamak",
   "Promote": "Teşvik etmek",
   "Remove": "Kaldırmak",
@@ -441,6 +451,9 @@
   "No Results Found": "Sonuç Bulunamadı",
   "No More Videos": "Başka Video Yok",
   "Search by title in JF Library": "JF Library'de başlığa göre arama yapın",
+  "Please verify your email": "Lütfen e-postanızı doğrulayın",
+  "You need to verify your email before you can continue.": "Devam edebilmeniz için e-postanızı doğrulamanız gerekmektedir.",
+  "Send verification email": "Doğrulama e-postası gönder",
   "Journeys Archived": "Yolculuklar Arşivlendi",
   "Journeys Trashed": "Çöpe Atılan Yolculuklar",
   "No journeys to display.": "Gösterilecek yolculuk yok.",
@@ -592,7 +605,7 @@
   "Change Team Name": "Takım Adını Değiştir",
   "Save": "Kaydet",
   "Only a manager can invite new members to the team": "Sadece bir yönetici ekibe yeni üyeler davet edebilir",
-  "No email notifications. New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "E-posta bildirimi yok. Yeni üyeler anında erişim elde eder. Ekip üyeleri tüm analizleri görebilir, herhangi bir yolculuğu düzenleyebilir, yolculuğu silebilir ve kopyalayabilir.",
+  "New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "Yeni üyeler anında erişim elde eder. Ekip üyeleri tüm analizleri görebilir, herhangi bir yolculuğu düzenleyebilir, yolculuğu silebilir ve kopyalayabilir.",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}} {{secondLanguage}}</2>": "<0>Yolculuk Şablonları</0><1>içinde</1><2>{{firstLanguage}}, {{secondLanguage}}</2>",
   "Topics, holidays, felt needs, collections": "Konular, tatiller, keçe ihtiyaçları, koleksiyonlar",
   "Audience": "İzleyici",
