chore: new translations apps-journeys-admin.json Indonesian

--- a/libs/locales/id-ID/apps-journeys-admin.json
+++ b/libs/locales/id-ID/apps-journeys-admin.json
@@ -33,6 +33,17 @@
   "Sign In": "Masuk",
   "Terms and Conditions": "Syarat dan Ketentuan",
   "A question about the terms and conditions form": "Pertanyaan tentang formulir syarat dan ketentuan",
+  "Required": "Diperlukan",
+  "Validate NextStep Email": "Validasi Email Langkah Berikutnya",
+  "Verify Your Email": "Verifikasi Email Anda",
+  "To start making NextSteps journeys": "Untuk mulai melakukan perjalanan NextSteps",
+  "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.": "Email telah dikirim ke alamat ini dengan tautan untuk memverifikasi akun Anda. Jika Anda belum menerima email setelah beberapa menit, periksa folder spam Anda.",
+  "Resend Validation Email": "Kirim Ulang Email Validasi",
+  "Verify With Code Instead": "Verifikasi Dengan Kode Sebagai Gantinya",
+  "Enter verification code from email": "Masukkan kode verifikasi dari email",
+  "Code": "Kode",
+  "Validate Email": "Validasi Email",
+  "Logout": "Keluar",
   "Manage Access": "Mengelola Akses",
   "You can't edit this journey": "Anda tidak dapat mengedit perjalanan ini",
   "Send an access request to the creator of this journey": "Kirim permintaan akses ke pembuat perjalanan ini",
@@ -55,9 +66,8 @@
   "Editor invite link copied": "Tautan undangan editor disalin",
   "Users invited by link will request approval.": "Pengguna yang diundang melalui tautan akan meminta persetujuan.",
   "Please enter a valid email address": "Masukkan alamat email yang valid",
-  "Required": "Diperlukan",
   "This email is already on the list": "Email ini sudah ada dalam daftar",
-  "No email notifications. New users get access instantly.": "Tidak ada pemberitahuan email. Pengguna baru mendapatkan akses secara instan.",
+  "New users get access instantly.": "Pengguna baru mendapatkan akses secara instan.",
   "Approve": "Menyetujui",
   "Promote": "Mempromosikan",
   "Remove": "Menghapus",
@@ -441,6 +451,9 @@
   "No Results Found": "Tidak ada hasil yang ditemukan",
   "No More Videos": "Tidak Ada Lagi Video",
   "Search by title in JF Library": "Cari berdasarkan judul di Perpustakaan JF",
+  "Please verify your email": "Harap verifikasi email Anda",
+  "You need to verify your email before you can continue.": "Anda perlu memverifikasi email Anda sebelum melanjutkan.",
+  "Send verification email": "Kirim email verifikasi",
   "Journeys Archived": "Perjalanan Diarsipkan",
   "Journeys Trashed": "Perjalanan yang dibatalkan",
   "No journeys to display.": "Tidak ada perjalanan yang ditampilkan.",
@@ -592,7 +605,7 @@
   "Change Team Name": "Ubah Nama Tim",
   "Save": "Simpan",
   "Only a manager can invite new members to the team": "Hanya manajer yang dapat mengundang anggota baru ke dalam tim",
-  "No email notifications. New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "Tidak ada pemberitahuan email. Anggota baru mendapatkan akses secara instan. Anggota tim dapat melihat semua analitik, mengedit perjalanan apa pun, serta menghapus dan menyalin perjalanan.",
+  "New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "Anggota baru mendapatkan akses secara instan. Anggota tim dapat melihat semua analitik, mengedit perjalanan apa pun, serta menghapus dan menyalin perjalanan.",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}} {{secondLanguage}}</2>": "<0>Templat Perjalanan</0><1>di</1><2>{{firstLanguage}}, {{secondLanguage}}</2>",
   "Topics, holidays, felt needs, collections": "Topik, liburan, kebutuhan yang dirasakan, koleksi",
   "Audience": "Penonton",
