--- a/libs/locales/tl-PH/apps-journeys-admin.json
+++ b/libs/locales/tl-PH/apps-journeys-admin.json
@@ -3,11 +3,11 @@
   "Admin | Next Steps": "Admin | ",
   "Email Preferences Updated.": "Email Preferences Updated.",
   "Email Preferences": "Email Preferences",
-  "Stop All Notifications": "Stop All Notifications",
-  "Stop all current and future email notifications.": "Stop all current and future email notifications.",
+  "Select the types of email notifications you want to receive from NextSteps.": "Select the types of email notifications you want to receive from NextSteps.",
   "Account Notifications": "Account Notifications",
   "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.",
   "Done": "Tapos na",
+  "Feedback & Support": "Feedback",
   "Journeys": "Mga paglalakbay",
   "Create a New Journey": "Gumawa ng Bagong Paglalakbay",
   "Request Access": "Humiling ng Access",
@@ -538,7 +538,6 @@
   "See all": "Ipakita lahat",
   "Help us serve you better": "Tulungan kaming paglingkuran ka ng mas mahusay",
   "Next": "Susunod",
-  "Feedback & Support": "Feedback",
   "Create Custom Journey": "Gumawa ng Custom na Paglalakbay",
   "Template": "Template",
   "Use Template": "Gumamit ng Template",
