--- a/libs/locales/ru-RU/apps-journeys-admin.json
+++ b/libs/locales/ru-RU/apps-journeys-admin.json
@@ -3,11 +3,11 @@
   "Admin | Next Steps": "Админ | ",
   "Email Preferences Updated.": "Обновлены настройки электронной почты.",
   "Email Preferences": "Предпочтения электронной почты",
-  "Stop All Notifications": "Останови все уведомления",
-  "Stop all current and future email notifications.": "Останови все текущие и будущие уведомления по электронной почте.",
+  "Select the types of email notifications you want to receive from NextSteps.": "Выбери типы уведомлений по электронной почте, которые ты хочешь получать от NextSteps.",
   "Account Notifications": "Уведомления о счетах",
   "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "Отправляй по электронной почте сообщения о новых участниках твоих команд, приглашенных в команду, о том, что с тобой поделились путешествием, о запросах на доступ к путешествию и об удалении из команды.",
   "Done": "Сделанный",
+  "Feedback & Support": "Обратная связь",
   "Journeys": "Путешествия",
   "Create a New Journey": "Создать новое путешествие",
   "Request Access": "Запрос доступа",
@@ -538,7 +538,6 @@
   "See all": "Увидеть все",
   "Help us serve you better": "Помогите нам лучше обслуживать вас",
   "Next": "Следующий",
-  "Feedback & Support": "Обратная связь",
   "Create Custom Journey": "Создать индивидуальное путешествие",
   "Template": "Шаблон",
   "Use Template": "Использовать шаблон",
