chore: new translations apps-journeys-admin.json Chinese Simplified

--- a/libs/locales/zh-CN/apps-journeys-admin.json
+++ b/libs/locales/zh-CN/apps-journeys-admin.json
@@ -3,11 +3,11 @@
   "Admin | Next Steps": "管理员 |",
   "Email Preferences Updated.": "电子邮件首选项已更新。",
   "Email Preferences": "电子邮件首选项",
-  "Stop All Notifications": "停止所有通知",
-  "Stop all current and future email notifications.": "停止所有当前和未来的电子邮件通知。",
+  "Select the types of email notifications you want to receive from NextSteps.": "选择您希望从 NextSteps 接收的电子邮件通知类型。",
   "Account Notifications": "账户通知",
   "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "关于团队新成员、受邀加入团队、与您共享旅程、旅程访问请求以及从团队中删除的电子邮件更新。",
   "Done": "完毕",
+  "Feedback & Support": "反馈",
   "Journeys": "旅程",
   "Create a New Journey": "开创新征程",
   "Request Access": "申请进入",
@@ -538,7 +538,6 @@
   "See all": "查看全部",
   "Help us serve you better": "帮助我们更好地为您服务",
   "Next": "下一个",
-  "Feedback & Support": "反馈",
   "Create Custom Journey": "创建定制旅程",
   "Template": "模板",
   "Use Template": "使用模板",
