chore: new translations apps-journeys-admin.json French

--- a/libs/locales/fr-FR/apps-journeys-admin.json
+++ b/libs/locales/fr-FR/apps-journeys-admin.json
@@ -3,11 +3,11 @@
   "Admin | Next Steps": "Admin | Prochaines étapes",
   "Email Preferences Updated.": "Préférences de messagerie mises à jour.",
   "Email Preferences": "Préférences de courrier électronique",
-  "Stop All Notifications": "Arrêter toutes les notifications",
-  "Stop all current and future email notifications.": "Arrête toutes les notifications par courriel actuelles et futures.",
+  "Select the types of email notifications you want to receive from NextSteps.": "Sélectionne les types de notifications par courriel que tu veux recevoir de NextSteps.",
   "Account Notifications": "Notifications de compte",
   "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "Mets-toi au courant par courriel des nouveaux membres de tes équipes, des personnes invitées dans une équipe, des voyages partagés avec toi, des demandes d'accès aux voyages et des personnes retirées d'une équipe.",
   "Done": "Fait",
+  "Feedback & Support": "Commentaires et soutien",
   "Journeys": "Voyages",
   "Create a New Journey": "Crée un nouveau voyage",
   "Request Access": "Demande d'accès",
@@ -538,7 +538,6 @@
   "See all": "Voir tous",
   "Help us serve you better": "Aide-nous à mieux te servir",
   "Next": "Suivant",
-  "Feedback & Support": "Commentaires et soutien",
   "Create Custom Journey": "Créer un parcours personnalisé",
   "Template": "Modèle",
   "Use Template": "Utiliser le modèle",
