chore: new translations apps-journeys-admin.json Spanish

--- a/libs/locales/es-ES/apps-journeys-admin.json
+++ b/libs/locales/es-ES/apps-journeys-admin.json
@@ -3,11 +3,11 @@
   "Admin | Next Steps": "Admin | Próximos pasos",
   "Email Preferences Updated.": "Preferencias de correo electrónico Actualizadas.",
   "Email Preferences": "Preferencias de correo electrónico",
-  "Stop All Notifications": "Detener todas las notificaciones",
-  "Stop all current and future email notifications.": "Detén todas las notificaciones por correo electrónico actuales y futuras.",
+  "Select the types of email notifications you want to receive from NextSteps.": "Selecciona los tipos de notificaciones por correo electrónico que deseas recibir de NextSteps.",
   "Account Notifications": "Notificaciones de la cuenta",
   "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "Actualiza por correo electrónico los nuevos miembros de tus equipos, los invitados a un equipo, los trayectos compartidos contigo, las solicitudes de acceso a trayectos y los eliminados de un equipo.",
   "Done": "Hecho",
+  "Feedback & Support": "Comentarios y apoyo",
   "Journeys": "Viajes",
   "Create a New Journey": "Crea un nuevo viaje",
   "Request Access": "Solicitar acceso",
@@ -538,7 +538,6 @@
   "See all": "Ver todo",
   "Help us serve you better": "Ayúdanos a servirte mejor",
   "Next": "Siguiente",
-  "Feedback & Support": "Comentarios y apoyo",
   "Create Custom Journey": "Crear viaje personalizado",
   "Template": "Plantilla",
   "Use Template": "Utiliza la plantilla",
