chore: new translations apps-journeys-admin.json Japanese

--- a/libs/locales/ja-JP/apps-journeys-admin.json
+++ b/libs/locales/ja-JP/apps-journeys-admin.json
@@ -3,11 +3,11 @@
   "Admin | Next Steps": "管理者｜次のステップ",
   "Email Preferences Updated.": "Eメール設定を更新しました。",
   "Email Preferences": "メール設定",
-  "Stop All Notifications": "すべての通知を停止する",
-  "Stop all current and future email notifications.": "現在および将来のすべての電子メール通知を停止します。",
+  "Select the types of email notifications you want to receive from NextSteps.": "NextStepsから受け取りたいEメール通知の種類を選択します。",
   "Account Notifications": "アカウント通知",
   "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "チームへの新メンバー、チームへの招待、ジャーニーの共有、ジャーニーへのアクセスリクエスト、チームからの脱退に関する最新情報をメールでお知らせします。",
   "Done": "完了",
+  "Feedback & Support": "フィードバック＆サポート",
   "Journeys": "旅",
   "Create a New Journey": "新しい旅を創造する",
   "Request Access": "アクセスをリクエストする",
@@ -538,7 +538,6 @@
   "See all": "すべて見る",
   "Help us serve you better": "より良いサービスを提供するために",
   "Next": "次のページ",
-  "Feedback & Support": "フィードバック＆サポート",
   "Create Custom Journey": "カスタム・ジャーニーの作成",
   "Template": "テンプレート",
   "Use Template": "テンプレート使用",
