chore: new translations apps-journeys-admin.json Turkish

--- a/libs/locales/tr-TR/apps-journeys-admin.json
+++ b/libs/locales/tr-TR/apps-journeys-admin.json
@@ -3,11 +3,11 @@
   "Admin | Next Steps": "Yönetici | Sonraki Adımlar",
   "Email Preferences Updated.": "E-posta Tercihleri Güncellendi.",
   "Email Preferences": "E-posta Tercihleri",
-  "Stop All Notifications": "Tüm Bildirimleri Durdur",
-  "Stop all current and future email notifications.": "Mevcut ve gelecekteki tüm e-posta bildirimlerini durdurun.",
+  "Select the types of email notifications you want to receive from NextSteps.": "NextSteps'ten almak istediğiniz e-posta bildirimlerinin türlerini seçin.",
   "Account Notifications": "Hesap Bildirimleri",
   "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "Ekiplerinize yeni üyeler, bir ekibe davet edilenler, sizinle paylaşılan yolculuklar, yolculuk erişim talepleri ve bir ekipten çıkarılanlar hakkında e-posta güncellemeleri.",
   "Done": "Bitti",
+  "Feedback & Support": "Geri Bildirim ve Destek",
   "Journeys": "Yolculuklar",
   "Create a New Journey": "Yeni Bir Yolculuk Yaratın",
   "Request Access": "Erişim Talebi",
@@ -538,7 +538,6 @@
   "See all": "Tümünü görün",
   "Help us serve you better": "Size daha iyi hizmet vermemize yardımcı olun",
   "Next": "Sonraki",
-  "Feedback & Support": "Geri Bildirim ve Destek",
   "Create Custom Journey": "Özel Yolculuk Oluşturun",
   "Template": "Şablon",
   "Use Template": "Şablon Kullan",
