chore: new translations apps-journeys-admin.json Indonesian

--- a/libs/locales/id-ID/apps-journeys-admin.json
+++ b/libs/locales/id-ID/apps-journeys-admin.json
@@ -3,11 +3,11 @@
   "Admin | Next Steps": "Admin | Langkah Selanjutnya",
   "Email Preferences Updated.": "Preferensi Email Diperbarui.",
   "Email Preferences": "Preferensi Email",
-  "Stop All Notifications": "Hentikan Semua Pemberitahuan",
-  "Stop all current and future email notifications.": "Hentikan semua notifikasi email saat ini dan yang akan datang.",
+  "Select the types of email notifications you want to receive from NextSteps.": "Pilih jenis pemberitahuan email yang ingin Anda terima dari NextSteps.",
   "Account Notifications": "Pemberitahuan Akun",
   "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "Pembaruan email tentang anggota baru ke tim Anda, diundang ke tim, perjalanan yang dibagikan kepada Anda, permintaan akses perjalanan, dan dihapus dari tim.",
   "Done": "Selesai.",
+  "Feedback & Support": "Umpan Balik & Dukungan",
   "Journeys": "Perjalanan",
   "Create a New Journey": "Buat Perjalanan Baru",
   "Request Access": "Minta Akses",
@@ -538,7 +538,6 @@
   "See all": "Lihat semua",
   "Help us serve you better": "Bantu kami melayani Anda dengan lebih baik",
   "Next": "Berikutnya",
-  "Feedback & Support": "Umpan Balik & Dukungan",
   "Create Custom Journey": "Buat Perjalanan Khusus",
   "Template": "Templat",
   "Use Template": "Gunakan Templat",
