--- a/libs/locales/hi-IN/apps-journeys-admin.json
+++ b/libs/locales/hi-IN/apps-journeys-admin.json
@@ -3,11 +3,11 @@
   "Admin | Next Steps": "Admin | Next Steps",
   "Email Preferences Updated.": "Email Preferences Updated.",
   "Email Preferences": "Email Preferences",
-  "Stop All Notifications": "Stop All Notifications",
-  "Stop all current and future email notifications.": "Stop all current and future email notifications.",
+  "Select the types of email notifications you want to receive from NextSteps.": "Select the types of email notifications you want to receive from NextSteps.",
   "Account Notifications": "Account Notifications",
   "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.",
   "Done": "Done",
+  "Feedback & Support": "Feedback & Support",
   "Journeys": "Journeys",
   "Create a New Journey": "Create a New Journey",
   "Request Access": "Request Access",
@@ -538,7 +538,6 @@
   "See all": "See all",
   "Help us serve you better": "Help us serve you better",
   "Next": "Next",
-  "Feedback & Support": "Feedback & Support",
   "Create Custom Journey": "Create Custom Journey",
   "Template": "Template",
   "Use Template": "Use Template",
