--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -562,6 +562,36 @@
   "You need access": "You need access",
   "You need to be a publisher to view this template.": "You need to be a publisher to view this template.",
   "Back to the Admin Panel": "Back to the Admin Panel",
+  "You already have an account": "You already have an account",
+  "You've already used ": "You've already used ",
+  " Sign in with {{service}} to continue": " Sign in with {{service}} to continue",
+  "Please enter your email address": "Please enter your email address",
+  "Log in or Sign up": "Log in or Sign up",
+  "No account? We'll create one for you automatically.": "No account? We'll create one for you automatically.",
+  "OR": "OR",
+  "Enter your email address here": "Enter your email address here",
+  "Sign in with email": "Sign in with email",
+  "Enter your password": "Enter your password",
+  "The email and password you entered don't match": "The email and password you entered don't match",
+  "You have entered an incorrect password too many times. Please try again in a few minutes.": "You have entered an incorrect password too many times. Please try again in a few minutes.",
+  "Sign in": "Sign in",
+  "Enter Password": "Enter Password",
+  "Forgot your password?": "Forgot your password?",
+  "An error occurred: {{message}}": "An error occurred: {{message}}",
+  "Reset Password": "Reset Password",
+  "Get instructions sent to this email that explain how to reset your password.": "Get instructions sent to this email that explain how to reset your password.",
+  "Too Short!": "Too Short!",
+  "Too Long!": "Too Long!",
+  "Enter your account name": "Enter your account name",
+  "Password must be at least 6 characters long": "Password must be at least 6 characters long",
+  "The email address is already used by another account": "The email address is already used by another account",
+  "Create account": "Create account",
+  "First & last name": "First & last name",
+  "Choose password": "Choose password",
+  "Sign Up": "Sign Up",
+  "Check your email": "Check your email",
+  "Follow the instructions sent to ": "Follow the instructions sent to ",
+  " to recover your password": " to recover your password",
   "Active": "Active",
   "Archived": "Archived",
   "Strategy": "Strategy",
